# prism-py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: experimental.py  hub.py  main.py  main_tester.py  quickstart.py  setup.py
resources/: attributions.md
src/forge/: __init__.py  forge.py
src/forge/api/: __init__.py  crud.py  health.py  metadata.py  router.py  views.py
src/forge/common/: __init__.py  types.py
src/forge/core/: __init__.py  config.py  logging.py
src/forge/db/: __init__.py  client.py  models.py
src/prism/: cache.py  config.py  prism.py  ui.py
src/prism/api/: __init__.py  crud.py  health.py  metadata.py  models.py  router.py  views.py
src/prism/api/routers/: __init__.py  crud.py  functions.py  health.py  metadata.py  views.py
src/prism/common/: __init__.py  types.py
src/prism/core/: __init__.py  logging.py
src/prism/core/introspection/: base.py  postgres.py
src/prism/core/models/: enums.py  functions.py  tables.py
src/prism/core/query/: builder.py  operators.py
src/prism/core/templates/: robots.txt
src/prism/core/types/: mapping.py  utils.py
src/prism/db/: __init__.py  client.py  models.py
src/prism/templates/: sitemap.xml
test/: harness.py  static.py  test-forge.py
